# riku

./: .dockerignore  .gitignore  .rules  API.md  ARCHITECTURE.md  AUDIT.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-06-23.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FULL_AUDIT_2026_03_12.md  KERNEL_PLAN.md  LICENSE  PLUGIN_PROTOCOL.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES.md  SESSION_FINAL.md  SUPERVISOR_EXPERT_REVIEW.md  SYSTEMD.md  deny.toml  marketplace.toml  mise.toml  mkdocs.yml  nginx.default.conf  riku-nginx.path  riku-nginx.service  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  close-inactive-issues.yml  codeql.yml  docs.yml  e2e.yml  release.yml  rust-ci.yml
benches/: README.md  benchmark.sh  core_benchmarks.rs  load_test.sh
benchmarks/: README.md  benchmark.sh  load_test.sh
contrib/nginx/: default.conf
contrib/systemd/: README.md  riku-nginx-reload.service  riku-nginx.path  riku.service
crates/riku/: Cargo.toml
crates/riku-cli/: Cargo.toml
crates/riku-cli/src/: backup.rs  cli.rs  container.rs  control_actions.rs  hooks.rs  lib.rs  scp.rs
crates/riku-cli/src/addon/: mod.rs
crates/riku-cli/src/agent/: auth.rs  help.rs  mod.rs  schema.rs
crates/riku-cli/src/agent/commands/: cmd_app.rs  cmd_config.rs  cmd_runtime.rs  mod.rs
crates/riku-cli/src/apps/: config.rs  control.rs  create.rs  deploy.rs  dump_state.rs  logs.rs  mod.rs  stats.rs
crates/riku-cli/src/apps/process/: ps_all.rs
crates/riku-cli/src/client_plugins/: discovery.rs  execute.rs
crates/riku-cli/src/doctor/: mod.rs
crates/riku-cli/src/git/: hook.rs  mod.rs  receive_pack.rs
crates/riku-cli/src/plugins/: mod.rs  scaffold.rs
crates/riku-cli/src/quickstart/: mod.rs  scaffold.rs
crates/riku-cli/src/setup/: git_hook.rs  init.rs  mod.rs  ssh.rs  system_service.rs
crates/riku-config/: Cargo.toml
crates/riku-dashboard/: Cargo.toml
crates/riku-dashboard/src/: addons.rs  appcfg.rs  index.html  installed.rs  lib.rs  logs.rs  market.rs  mutations.rs  routes.rs  system.rs
crates/riku-deploy/: Cargo.toml
crates/riku-deploy/src/: container_runtime.rs  env_setup.rs  git_ops.rs  hooks.rs  lib.rs  lock.rs  supervisor_ctl.rs  workers.rs
crates/riku-error/: Cargo.toml
crates/riku-nginx/: Cargo.toml
crates/riku-nginx/src/: cloudflare.rs  context.rs  lib.rs  sanitize.rs  ssl.rs  template.rs  tests.rs  validate.rs
crates/riku-plugin-clojure/: Cargo.toml
crates/riku-plugin-container/: Cargo.toml
crates/riku-plugin-java/: Cargo.toml
crates/riku-plugins/: Cargo.toml
crates/riku-plugins/src/: bundles.rs  discovery.rs  executor.rs  hooks.rs  install.rs  lib.rs  lockfile.rs  manager.rs  manager_tests.rs  runtime.rs  signing.rs
crates/riku-plugins/src/addon/: dispatch.rs  mod.rs  service.rs
crates/riku-plugins/src/events/: bus.rs
crates/riku-plugins/src/marketplace/: mod.rs  registry.rs
crates/riku-plugins/src/router/: dispatch.rs  mod.rs
crates/riku-plugins/src/sandbox/: apply.rs  mod.rs  paths.rs
crates/riku-supervisor/: Cargo.toml
crates/riku-supervisor/src/: lib.rs
crates/riku-supervisor/src/cgroups/: mod.rs
crates/riku-supervisor/src/config/: mod.rs  tests.rs
crates/riku-supervisor/src/daemon/: config_watcher.rs  cron_tasks.rs  init.rs  maintenance.rs  mod.rs
crates/riku-supervisor/src/health/: actions.rs  control.rs  mod.rs  plugins.rs  responses.rs  tests.rs
crates/riku-supervisor/src/log_rotation/: mod.rs
crates/riku-supervisor/src/process/: health_check.rs  isolation.rs  mod.rs  orchestration.rs  spawn.rs  spawned.rs  stop.rs
crates/riku-supervisor/src/stats/: manager.rs  resources.rs  types.rs
crates/riku-util/: Cargo.toml
crates/riku-util/src/: deploy_logger.rs  env.rs  fs.rs  lib.rs  nginx_validation.rs  procfile.rs  secure.rs  ssh_keys.rs  validation.rs
crates/riku-util/src/cron/: mod.rs  parser.rs  tests.rs
crates/riku-util/src/resource_limits/: mod.rs  tests.rs
crates/riku/src/: lib.rs  main.rs
dashboard/: DESIGN_PROMPT.md  FEATURE_INVENTORY.md  README.md  instrumentation.ts  lock.yaml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AppActionBar.tsx  AppControls.tsx  CollapsibleSection.tsx  EnvEditor.tsx  NetworkPanel.tsx  PluginsPanel.tsx  StatusTag.tsx  SupervisorGrid.tsx  TerminalStream.tsx  theme-provider.tsx
dashboard/lib/: api.ts  format.ts  status.ts  types.ts  useAppActions.ts
dashboard/scripts/: audit-dashboard.ts
dashboard/server/: security.ts  validation.ts
dashboard/test-results/: .last-run.json
docker/: Dockerfile.test  test-entrypoint.sh
docs/: ENV.md  INSTALL.md  PLUGINS.md  README.md  requirements.txt
docs-site/docs/: ai-agents.md  cli.md  index.md  installation.md  nginx.md  quick-start.md  supervisor.md  systemd.md
docs-site/site/: 404.html  index.html  sitemap.xml
docs/docs/: addons.md  ai-agents.md  backup-restore.md  cli.md  dashboard.md  doctor.md  env.md  faq.md  index.md  installation.md  marketplace.md  nginx.md  plugin-bundles.md  plugin-gallery.md  plugins.md  quick-start.md  resource-limits.md  rollback.md  runtimes.md  supervisor.md  systemd.md
docs/plans/: 2026-02-16-riku-implementation.md  2026-02-16-riku-rust-port-design.md
examples/: ENV  Procfile  README.md  SCALING
examples/client-plugins/: EXAMPLES.md  README.md  backup  example  open  tunnel
examples/ghcr-image/: ENV  Procfile  README.md
examples/golang/: ENV  Procfile  README.md  (+2 more)
plugins/: ghcr  go  node  python  ruby  rust-lang
scripts/: coverage.sh  install.sh  run-docker-tests.sh
src/: config.rs  error.rs  lib.rs  main.rs  nginx.rs  plugins.rs  util.rs
templates/: nginx.conf.tera  nginx_acme_firstrun.conf.tera  nginx_cache.conf.tera  nginx_common.conf.tera  nginx_https_only.conf.tera  nginx_portmap.conf.tera  nginx_proxy.conf.tera  nginx_static.conf.tera  nginx_wsgi.conf.tera
tests/: run-all-tests.sh  stress_tests.rs
(+306 files in other folders)
