[workspace]
members = [
    ".",
    "crates/riku-plugin-java",
    "crates/riku-plugin-clojure",
    "crates/riku-plugin-container",
]
resolver = "2"

[package]
name = "riku"
version = "3.0.0"
edition = "2021"
description = "Production-ready PaaS for multi-tenant deployments — in Rust"
authors = ["Rakibul Yeasin"]
repository = "https://github.com/dreygur/riku"
homepage = "https://github.com/dreygur/riku"
license = "MIT"
keywords = ["paas", "deployment", "git", "supervisor", "nginx"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tera = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nix = { version = "0.29", features = ["signal", "process", "user", "fs", "resource", "sched", "mount"] }
libc = "0.2"
notify = "8"
regex = "1"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
which = "7"
glob = "0.3"
dirs = "5"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1"
threadpool = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests/mod.rs"

[[bench]]
name = "core_benchmarks"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
