[workspace]
members = [
    "crates/riku",
    "crates/riku-config",
    "crates/riku-util",
    "crates/riku-error",
    "crates/riku-nginx",
    "crates/riku-plugins",
    "crates/riku-supervisor",
    "crates/riku-deploy",
    "crates/riku-cli",
    "crates/riku-dashboard",
    "crates/riku-plugin-java",
    "crates/riku-plugin-clojure",
    "crates/riku-plugin-container",
]
resolver = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
