[package]
name = "riku-cli"
version = "0.1.0"
edition = "2021"
description = "Riku CLI provider layer: command handlers and argument parsing"
authors = ["Rakibul Yeasin"]
repository = "https://github.com/dreygur/riku"
license = "MIT"

[dependencies]
riku-config = { path = "../riku-config" }
riku-util = { path = "../riku-util" }
riku-nginx = { path = "../riku-nginx" }
riku-plugins = { path = "../riku-plugins" }
riku-supervisor = { path = "../riku-supervisor" }
riku-deploy = { path = "../riku-deploy" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
which = "7"

[dev-dependencies]
tempfile = "3"
