[package]
name = "riku-deploy"
version = "0.1.0"
edition = "2021"
description = "Riku deployment orchestration (service layer)"
authors = ["Rakibul Yeasin"]
repository = "https://github.com/dreygur/riku"
license = "MIT"

[dependencies]
riku-config = { path = "../riku-config" }
riku-util = { path = "../riku-util" }
riku-error = { path = "../riku-error" }
riku-nginx = { path = "../riku-nginx" }
riku-plugins = { path = "../riku-plugins" }
riku-supervisor = { path = "../riku-supervisor" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
