[package]
name = "riku-plugins"
version = "0.1.0"
edition = "2021"
description = "Riku plugin system: discovery, manifest, marketplace, sandbox, signing"
authors = ["Rakibul Yeasin"]
repository = "https://github.com/dreygur/riku"
license = "MIT"

[dependencies]
riku-config = { path = "../riku-config" }
riku-util = { path = "../riku-util" }
riku-error = { path = "../riku-error" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
libc = "0.2"
tracing = "0.1"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
landlock = "0.4.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
